discussion/jgit/131879/131879_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

Ssh tests with an Apache MINA sshd test git server

Add a simple ssh git server based on Apache MINA sshd, and use it
in new tests that verify ssh operations and in particular a number
of bugs that had cropped up over time in JSch.

The git server supports fetching only, and sftp access.

The tests are all in an abstract base class; the concrete JschSshTest
class only provides ssh-specific test setup. So the same tests could
be run easily also with some other ssh client.

Bug: 520927
Change-Id: Ide6687b717fb497a29fc83f22b07390a26dfce1d
Signed-off-by: Thomas Wolf <thomas.wolf@paranor.ch>

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Matthias Sohn
Date: 2018-11-06 12:27:25.000000000
Message: 
Uploaded patch set 6: Patch Set 5 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: CI Bot
Date: 2018-11-06 12:27:37.000000000
Message: 
Patch Set 6:

Build Started https://ci.eclipse.org/jgit/job/jgit.gerrit/14771/
----------------------------------------------------------------------------------------------------------------------
Author: CI Bot
Date: 2018-11-06 12:56:36.000000000
Message: 
Patch Set 6: Verified+1

Build Successful 

https://ci.eclipse.org/jgit/job/jgit.gerrit/14771/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Matthias Sohn
Date: 2018-11-06 12:56:58.000000000
Message: 
Change has been successfully merged by Matthias Sohn
----------------------------------------------------------------------------------------------------------------------
Author: CI Bot
Date: 2018-11-06 16:29:18.000000000
Message: 
Patch Set 6:

Build Failed 

https://ci.eclipse.org/jgit/job/jgit/1803/ : ABORTED
----------------------------------------------------------------------------------------------------------------------
Author: Jonathan Nieder
Date: 2018-11-06 22:08:05.000000000
Message: 
Patch Set 6:

(1 comment)
File Comment: org.eclipse.jgit.junit/src/org/eclipse/jgit/junit/ssh/SshTestGitServer.java -> Does this belong in org.eclipse.jgit.junit? It means a new dependency for that package, which is mostly about generic JUnit support for JGit repositories.
----------------------------------------------------------------------------------------------------------------------
Author: Jonathan Nieder
Date: 2018-11-06 22:09:33.000000000
Message: 
Patch Set 6:

(1 comment)
----------------------------------------------------------------------------------------------------------------------
Author: Matthias Sohn
Date: 2018-11-07 08:09:37.000000000
Message: 
Patch Set 6:

> (1 comment)

Thomas will move it to another bundle at the top of this series to avoid another round of nasty conflict resolutions which would be otherwise required in this series, see his comment above from Nov 4 22:54
----------------------------------------------------------------------------------------------------------------------
Author: Thomas Wolf
Date: 2018-11-07 08:55:15.000000000
Message: 
Patch Set 6:

I hope that's good enough for Jonathan. Might be a while until we get to the top of this series...

If it's really urgent, I _could_ do it at the bottom, but it'll take me a few hours, and I'll have to re-test maven & bazel builds on each commit where I have to change things. I don't think I could get to it this week anyway.

What problems does this cause actually?
----------------------------------------------------------------------------------------------------------------------
Author: Jonathan Nieder
Date: 2018-11-09 03:19:57.000000000
Message: 
Patch Set 6:

> I hope that's good enough for Jonathan. Might be a while until we get to the top of this series...
> 
> If it's really urgent, I _could_ do it at the bottom, but it'll take me a few hours, and I'll have to re-test maven & bazel builds on each commit where I have to change things. I don't think I could get to it this week anyway.

I can revert locally in the meantime, so there's no rush.

> What problems does this cause actually?

We're using Apache SSHD 2.1.0 here. The tests fail to build:

 org.eclipse.jgit.junit/java/org/eclipse/jgit/junit/ssh/SshTestGitServer.java:193: error: constructor AbstractCommandSupport in class AbstractCommandSupport cannot be applied to given types;
                        super(command, executorService, false);
                        ^
  required: String,CloseableExecutorService
  found:    String,ExecutorService,boolean
  reason: actual and formal argument lists differ in length
----------------------------------------------------------------------------------------------------------------------
Author: Thomas Wolf
Date: 2018-11-09 14:00:07.000000000
Message: 
Patch Set 6:

> We're using Apache SSHD 2.1.0 here. The tests fail to build:

Darn, hadn't given this enough thought. We _had_ noticed that they break API between minor versions. :-( But somehow it had slipped my mind that this might become a problem for this junit bundle.

The top change moving this into its own bundle is https://git.eclipse.org/r/#/c/132181/ .
----------------------------------------------------------------------------------------------------------------------
